--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
-aiohttp==3.5.4
-aioice==0.6.15
-aiortc==0.9.21
-asn1crypto==0.24.0
+aiohttp==3.6.2
+aioice==0.6.18
+aiortc==0.9.28
+asn1crypto==1.3.0
 async-timeout==3.0.1
-attrs==19.1.0
-av==6.2.0
-cffi==1.12.3
+attrs==19.3.0
+av==8.0.1
+cffi==1.14.0
 chardet==3.0.4
-crc32c==1.7
-cryptography==2.7
-idna==2.8
-multidict==4.5.2
+crc32c==2.0
+cryptography==2.9.2
+idna==2.9
+multidict==4.7.5
 netifaces==0.10.9
-pycparser==2.19
-pyee==6.0.0
-pylibsrtp==0.6.1
-pyOpenSSL==19.0.0
-python-engineio==3.8.2.post1
-python-socketio==4.2.0
-six==1.12.0
-websockets==8.0
-yarl==1.3.0
+pycparser==2.20
+pyee==7.0.1
+pylibsrtp==0.6.6
+pyOpenSSL==19.1.0
+python-engineio==3.12.1
+python-socketio==4.5.1
+six==1.14.0
+websockets==8.1
+yarl==1.4.2
